--- a/style.css
+++ b/style.css
@@ -7,6 +7,22 @@
 
 /* Reset */
 
+:root {
+  --clr-bg: hsl(0deg 0% 90%);
+  --clr-fg: hsl(0deg 0% 95%);
+  --clr-border: hsl(0deg 0% 75%);
+  --clr-content: hsl(0deg 0% 5%);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --clr-bg: hsl(0deg 0% 15%);
+    --clr-fg: hsl(0deg 0% 20%);
+    --clr-border: hsl(0deg 0% 5%);
+    --clr-content: hsl(0deg 0% 95%);
+  }
+}
+
 *,
 *::before,
 *::after {
@@ -19,12 +35,9 @@
   line-height: calc(1em + 0.5rem);
 }
 
-html {
-  color-scheme: light dark;
-}
-
 body {
-  color: hsl(0 0 5%);
+  background-color: var(--clr-bg);
+  color: var(--clr-content);
   font-family: monospace;
 }
 
@@ -53,6 +66,6 @@ main {
 .container__div-pixel {
   width: 40px;
   height: 40px;
-  outline: 1px solid hsl(0deg 0% 75%);
-  background-color: hsl(0deg 0% 95%);
+  outline: 1px solid var(--clr-border);
+  background-color: var(--clr-fg);
 }
