--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /*
   CSS DIRECTORY
     1. =GLOBAL
+    2. =CANVAS
 */
 
 /* ===GLOBAL=== */
@@ -56,6 +57,8 @@ main {
   margin: 1rem auto;
   max-width: 640px;
 }
+
+/* ===CANVAS=== */
 
 .canvas {
   display: flex;
