Add mouseover coloring event listener on .canvas

--- a/style.css
+++ b/style.css
@@ -72,3 +72,7 @@ main {
   outline: 1px solid var(--clr-border);
   background-color: var(--clr-fg);
 }
+
+.canvas__pixel--colored {
+  background-color: blue;
+}
