--- a/style.css
+++ b/style.css
@@ -9,17 +9,19 @@
 /* Reset */
 
 :root {
-  --clr-bg: hsl(0deg 0% 90%);
-  --clr-fg: hsl(0deg 0% 95%);
-  --clr-border: hsl(0deg 0% 5%);
+  --clr-base: hsl(0deg 0% 95%);
+  --clr-base-secondary: hsl(from var(--clr-base) h s calc(l + 5));
   --clr-content: hsl(0deg 0% 5%);
+  --clr-content-secondary: hsl(from var(--clr-content) h s calc(l + 25));
+  --clr-border: hsl(0deg 0% 5% / 50%);
+  --clr-hover: hsl(from var(--clr-content) h s l / 15%);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --clr-bg: hsl(0deg 0% 15%);
-    --clr-fg: hsl(0deg 0% 20%);
+    --clr-base: hsl(0deg 0% 10%);
     --clr-content: hsl(0deg 0% 95%);
+    --clr-content-secondary: hsl(from var(--clr-content) h s calc(l - 25));
   }
 }
 
@@ -36,7 +38,7 @@
 }
 
 body {
-  background-color: var(--clr-bg);
+  background-color: var(--clr-base);
   color: var(--clr-content);
   font-family: monospace;
 }
@@ -52,22 +54,43 @@ video {
   max-width: 100%;
 }
 
-main {
-  margin: 1rem auto;
-  max-width: 640px;
-}
-
 /* ===CANVAS=== */
 
+main {
+  margin: 1rem auto;
+  width: 640px;
+}
+
+.btn-list {
+  margin-top: 0.25rem;
+}
+
+button {
+  padding: 0.25em 0.5em;
+  border: none;
+  border-radius: 5px;
+  background-color: var(--clr-base-secondary);
+  color: var(--clr-content-secondary);
+  font: inherit;
+}
+
+button:hover {
+  cursor: pointer;
+  box-shadow: inset 0 0 999px 999px var(--clr-hover);
+}
+
 .canvas {
+  margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
-  margin-top: 1rem;
+  margin-top: 0.65rem;
+  width: 640px;
+  height: 640px;
 }
 
 .canvas__pixel {
   width: 40px;
   height: 40px;
   outline: 1px solid var(--clr-border);
-  background-color: var(--clr-fg);
+  background-color: var(--clr-base-secondary);
 }
