--- a/style.css
+++ b/style.css
@@ -9,8 +9,9 @@
 /* Reset */
 
 :root {
-  --clr-base: hsl(0deg 0% 95%);
-  --clr-base-secondary: hsl(from var(--clr-base) h s calc(l + 5));
+  color-scheme: light;
+  --clr-base: hsl(0deg 0% 100%);
+  --clr-base-secondary: hsl(from var(--clr-base) h s calc(l - 7));
   --clr-content: hsl(0deg 0% 5%);
   --clr-content-secondary: hsl(from var(--clr-content) h s calc(l + 25));
   --clr-border: hsl(0deg 0% 5% / 50%);
@@ -19,7 +20,9 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
+    color-scheme: dark;
     --clr-base: hsl(0deg 0% 10%);
+    --clr-base-secondary: hsl(from var(--clr-base) h s calc(l + 7));
     --clr-content: hsl(0deg 0% 95%);
     --clr-content-secondary: hsl(from var(--clr-content) h s calc(l - 25));
   }
@@ -34,6 +37,7 @@
 * {
   margin: 0;
   padding: 0;
+  font: inherit;
   line-height: calc(1em + 0.5rem);
 }
 
@@ -41,6 +45,11 @@ body {
   background-color: var(--clr-base);
   color: var(--clr-content);
   font-family: monospace;
+}
+
+h1 {
+  font-size: 1.75rem;
+  font-weight: bold;
 }
 
 /* Media */
@@ -65,18 +74,19 @@ main {
   margin-top: 0.25rem;
 }
 
-button {
+button,
+select {
   padding: 0.25em 0.5em;
   border: none;
   border-radius: 5px;
   background-color: var(--clr-base-secondary);
   color: var(--clr-content-secondary);
-  font: inherit;
-}
 
-button:hover {
-  cursor: pointer;
-  box-shadow: inset 0 0 999px 999px var(--clr-hover);
+  &:hover,
+  :focus {
+    cursor: pointer;
+    box-shadow: inset 0 0 999px 999px var(--clr-hover);
+  }
 }
 
 .canvas {
